--- a/main.ipynb
+++ b/main.ipynb
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Setup (from last year)"
+    "# Model Setup"
    ]
   },
   {
@@ -305,10 +305,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_filters = [1, 8, 16, 32, 64, 128]\n",
+    "class CNN(nn.Module):\n",
+    "    def __init__(self, pre_proocesses, hidden_sizes, activation_function, linear_layer1_size, output_size):\n",
+    "\n",
+    "        super(CNN, self).__init__()\n",
+    "\n",
+    "        self.hidden_sizes = hidden_sizes\n",
+    "        self.activation_function = activation_function\n",
+    "        self.output_size = output_size\n",
+    "        self.linear_layer1_size = linear_layer1_size\n",
+    "\n",
+    "\n",
+    "        self.layers = nn.ModuleList()\n",
+    "\n",
+    "        # add preprocessing steps\n",
+    "        for process in pre_proocesses:\n",
+    "            self.layers.append(process)\n",
+    "\n",
+    "        for i in range(len(self.hidden_sizes)):\n",
+    "            self.layers.append(nn.Conv1d(1 if i ==0 else self.hidden_sizes[i-1], self.hidden_sizes[i], kernel_size=3))\n",
+    "            self.layers.append(nn.BatchNorm1d(self.hidden_sizes[i], eps=.00001, momentum=0.1, affine=True, track_running_stats=True))\n",
+    "            self.layers.append(nn.MaxPool1d(kernel_size=3))\n",
+    "            self.layers.append(self.activation_function())\n",
+    "\n",
+    "        # self.layers.append(nn.AdaptiveAvgPool1d(1))\n",
+    "        self.layers.append(nn.Flatten()) \n",
+    "        self.layers.append(nn.Linear(in_features=(self.hidden_sizes[-1]), out_features=self.linear_layer1_size, bias=True))\n",
+    "        self.layers.append(nn.Dropout(p=0.5))\n",
+    "        self.layers.append(nn.Linear(in_features=self.hidden_linear_output, out_features=self.output_size, bias=True))\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_model = CNN(pre_proocesses=[], hidden_sizes=[8, 16, 32, 64, 128], activation_function=nn.ReLU, linear_layer1_size=64, output_size=5)\n",
+    "print(cnn_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "below is example of last year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the model\n",
+    "\n",
+    "# increased depth of the network\n",
+    "n_filters = [1, 16, 16, 32, 32, 64, 64, 128, 128, 256]\n",
     "classifier_width = 128\n",
     "cnn_layers = []\n",
-    "output_size = 1\n",
+    "output_size = 6\n",
     "\n",
     "for n_in, n_out in zip(n_filters[:-1], n_filters[1:]):\n",
     "    cnn_layers.append(nn.Conv1d(n_in, n_out, kernel_size=3))\n",
@@ -327,10 +388,9 @@
     "    nn.Linear(classifier_width, classifier_width),\n",
     "    nn.ReLU(),\n",
     "    nn.Linear(classifier_width, output_size),\n",
-    "    nn.Sigmoid(),\n",
     ")\n",
+    "# No soft max as loss function expects logits\n",
     "\n",
-    "summary(model, (1, 40_000), device=\"cpu\")\n",
     "model = model.to(device)"
    ]
   }
