--- a/main.ipynb
+++ b/main.ipynb
@@ -336,6 +336,35 @@
     "## use pad_trunc(arr self.duration) self.duration = desired length"
    ]
   },
+{
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad_trunc_audio(audio_data, target_length = int(np.percentile(audio_lengths, 95))):\n",
+    "    standardized_data = []\n",
+    "    for data in audio_data:\n",
+    "        if len(data) < target_length:\n",
+    "            padded_data = np.pad(data, (0, target_length - len(data)), 'constant', constant_values=(0, 0))\n",
+    "            standardized_data.append(padded_data)\n",
+    "        elif len(data) > target_length:\n",
+    "            truncated_data = data[:target_length]\n",
+    "            standardized_data.append(truncated_data)\n",
+    "        else:\n",
+    "            standardized_data.append(data)\n",
+    "    return standardized_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standardized_audios = pad_trunc_audio(audio_data)\n"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
