--- a/main.ipynb
+++ b/main.ipynb
@@ -487,6 +487,27 @@
     "\n",
     "model = model.to(device)"
    ]
+  },
+{
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_metrics(actual, predicted):\n",
+    "\n",
+    "    mae = mean_absolute_error(actual, predicted)\n",
+    "    mse = mean_squared_error(actual, predicted)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    r2 = r2_score(actual, predicted)\n",
+    "    \n",
+    "    return {\n",
+    "        \"Mean Absolute Error (MAE)\": mae,\n",
+    "        \"Mean Squared Error (MSE)\": mse,\n",
+    "        \"Root Mean Squared Error (RMSE)\": rmse,\n",
+    "        \"R-squared (R^2)\": r2\n",
+    "    }\n"
+   ]
   }
  ],
  "metadata": {
