--- a/main.ipynb
+++ b/main.ipynb
@@ -20,6 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "%matplotlib inline"
    ]
   },
